@@ -159,7 +159,7 @@ using namespace std;
 #endif
 
 #ifndef LZF_USE_OFFSETS
-# if defined (WIN32) || defined (_WIN32)
+# ifdef _WIN32
 #  define LZF_USE_OFFSETS defined(_M_X64)
 # else
 #  if __cplusplus > 199711L
